# computer_graphic_finalwork

./: .gitattributes  .gitignore  LICENSE  README.md  wood.blend
Model/: four3_fix.blend
Model/assets/: cat.blend  cauldron.blend  knife.blend  oak_barrels.blend  objects.blend  pot.blend  stairs.blend  wall_v2.blend
Model/textures/: bricks_surface_height.tif  sun.hdr  wood09_height.tif
blender/: bottle.blend  cat_for_opengl.blend  house.blend  knife.fbx  oak_barrels.fbx  report.md  shelf.blend  table&carpet&stool.blend  table&carpet&stool.blend1  walk_cat.blend  walk_cat.blend1  walk_cat.mtl  walk_cat_副本.blend  wall_v2.blend  wall_v2.blend1  woodhouse.blend
blender/AppData/Local/Temp/blender_a33472/cache_fluid_b7de0849/config/: config_0001.uni
blender/AppData/Local/Temp/blender_a33472/cache_fluid_b7de0849/data/: fluid_data_0001.vdb
blender/final_sence/: final_model_merge.blend  final_model_merge.blend1
blender/final_sence/blendcache_final_model_merge/: 627562626C6573_000001_00.bphys  62756C6C6573_000001_00.bphys
blender/forOpengl/: floor.blend
blender/main_sence/: four3.blend  four3.blend1  four3_fix.blend  four3_fix.blend1
blender/main_sence/blendcache_four3/: 627562626C6573_000001_00.bphys  627562626C6573_000002_00.bphys  77617465722E303032_000002_00.bphys
blender/main_sence/blendcache_four3_fix/: 627562626C6573_000002_00.bphys
blender/right_wall/: objects.blend  table&carpet&stool&book.blend1
blender/right_wall/assets/models/raw-beef-meat_f2ded0a3-bd5b-45d5-971f-4c63f1232a96/: raw-beef-meat_e8b6df74-bcfe-4039-a27f-3a79f4316e94.blend
blender/right_wall/textures/: Teppich_Height.tif  brushed02_height.tif  carpet07_height.tif  fabric01_height.tif  iron_height.tif  metal02_height.tif  metal_brushed08_height.tif  wood10_height.tif  wood_peeling_paint_weathered_rough_8k.exr
blender/textures/: clay04_height.tif
opengl/: CMakeLists.txt
opengl/assets/models/: floor.mtl  stool.mtl  teapot.mtl  walk_cat.glb
opengl/include/OpenAL/: al.h  alc.h
opengl/shaders/: basic.fs  basic.vs  phong.fs  phong.vs  skinning.fs  skinning.vs
opengl/src/: Audio.cpp  Audio.h  Game.cpp  Game.h  Player.cpp  Player.h  StaticModel.cpp  StaticModel.h  UI.cpp  main.cpp
